<resources>
    <string name="app_name">Mind Garden V2</string>
    <string name="add_new_habit">Add new habit</string>
    <string name="start">Start</string>
    <integer name="animation_frame_duration">30</integer>

    <string-array name="spinner_time_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <!--  Add habit dialog  -->
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="habit_name">Habit name</string>
    <string name="habit_type">Habit type</string>
    <string name="checkbox">Checkbox</string>
    <string name="timer">Timer</string>
    <string name="habit_type_button">habit type button</string>
    <string name="minutes">minutes</string>
    <string name="length_for_this_task">Length for this task.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="recurring">Recurring</string>
    <string name="one_shot">one shot</string>
    <string name="repeatable">repeatable</string>
    <string name="background_image">background image</string>

</resources>