<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:background="@color/white"
    android:id="@+id/cl_habit_timer"
    >

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_habit"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_start_pause"
        />

    <EditText
        android:id="@+id/timer_length"
        android:hint="@string/length_for_this_task"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/add"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button_start_pause"
        app:layout_constraintEnd_toStartOf="@+id/tv_minutes"
        app:layout_constraintStart_toEndOf="@+id/text_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="0dp"
        />

    <TextView
        android:id="@+id/tv_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_start_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timer_length"
        app:layout_constraintTop_toTopOf="parent" />



<!--    <Spinner-->
<!--        android:id="@+id/spinner_time"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:spinnerMode="dialog"-->
<!--        android:entries="@array/spinner_time_array"-->
<!--        android:backgroundTint="@android:color/darker_gray"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/button_start_pause"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/text_view"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
/>


</androidx.constraintlayout.widget.ConstraintLayout>